# mewt-backend-v2

./: .gitignore  pants-installation-steps.txt  pants.toml  pyproject.toml
projects/: app.py
projects/mewt_backend/: BUILD  alembic.ini  app.py  lambda_handler.py  main.py
projects/mewt_backend/alembic/: env.py
projects/mewt_backend/alembic/versions/: 6ca3c03840f4_.py
projects/mewt_backend/src/: config.py  database.py  dependencies.py
projects/mewt_backend/src/internal/: admin.py
projects/mewt_backend/src/models/: __init__.py  book.py
projects/mewt_backend/src/routers/: api.py  auth.py  book.py  root.py
projects/mewt_backend/src/services/: book.py
setup_steps/: alembic-setup-steps.txt  pants-installation-steps.txt
